<resources>
    <string name="app_name">积日账</string>
    <string name="app_name1">KeepAccounts</string>
    <string name="title_activity_today">今日花费</string>

    <string name="action_about">About</string>
    <string name="title_activity_line_chart">LineChartActivity</string>
    <string name="title_activity_column_chart">ColumnChartActivity</string>
    <string name="title_activity_pie_chart">PieChartActivity</string>
    <string name="title_activity_bubble_chart">BubbleChartActivity</string>
    <string name="title_activity_preview_line_chart">PreviewLineChartActivity</string>
    <string name="title_activity_preview_column_chart">PreviewColumnChartActivity</string>
    <string name="title_activity_combo_line_column_chart">ComboLineColumnChartActivity</string>
    <string name="title_activity_line_column_dependency">LineColumnDependency</string>
    <string name="title_activity_good_bad">GoodBadActivity</string>
    <string name="title_activity_tempo_chart">TempoChartActivity</string>
    <string name="title_activity_speed_chart">SpeedChartActivity</string>
    <string name="title_activity_view_pager_charts">ViewPagerChartsActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_version_label">"Library version "</string>
    <string name="about_author">Leszek Wach 2014</string>
    <string name="about_app_icon_content_description">App icon</string>
    <string name="about_go_to_github">Go to GitHub</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--add String for home-->
    <string name="ahd_add_income">收入记帐 </string>
    <string name="ahd_add_expense">支出记帐 </string>
    <string name="ahd_add_cluster">随手记帐 </string>
    <string name="ahd_today_account">今日账单 </string>
    <string name="ahd_month_account">今月账单 </string>
    <string name="ahd_year_account">今年账单 </string>
    <string name="ahd_all_account">所有账单 </string>
    <string name="ahd_all_account_view">账单视图 </string>
    <string name="ahd_account">总额 </string>
    <string name="ahd_about">关于</string>

    <string name="income_type">收入类型</string>
    <string name="income">收入</string>
    <string name="expense_type">支出类型</string>
    <string name="expense">支出</string>
    <string name="daily">日常用品</string>
    <string name="choose_date">选择日期</string>

    <string name="loading_msg">初始化中，请稍后....</string>
    <string name="launch_cpr">Copyright zengsu</string>
    
    <!--登录注册-->
    <string name="login_name">请输入用户名</string>
    <string name="login_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_re_password">请再次输入密码</string>
    <string name="login_re_email">请输入邮箱</string>

    <string name="add_amount">金额</string>
    <string name="add_remarks">备注</string>




    <string name="nhh_name">小曾子</string>
    <string name="nhh_email">949391156@qq.com</string>
    <string name="quit">退出</string>
</resources>
