<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    tools:context=".RegisterActivity">
    <EditText
        android:id="@+id/et_res_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/login_user"
        android:layout_marginTop="150dp"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@null"
        android:hint="@string/login_name"/>
    <EditText
        android:id="@+id/et_res_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/email"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:background="@null"
        android:hint="@string/login_re_email"/>



    <EditText
        android:id="@+id/et_res_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:drawableLeft="@drawable/login_password"
        android:hint="@string/login_password"
        android:background="@null"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/et_res_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp" />

    <EditText
        android:id="@+id/et_re_res_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:drawableLeft="@drawable/login_password"
        android:hint="@string/register_re_password"
        android:inputType="textPassword"
        android:ems="10"
        android:background="@null"
        android:layout_below="@+id/et_res_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp" />

    <Button
        android:id="@+id/btn_res_resigter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginRight="10dp"
        android:background="@color/blue"
        android:textSize="22sp"
        android:layout_below="@+id/et_re_res_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />
</LinearLayout>