<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/launch_background"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/et_name"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/login_user"
        android:layout_marginTop="200dp"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@null"
        android:hint="@string/login_re_email"/>



    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:drawableLeft="@drawable/login_password"
        android:hint="@string/login_password"
        android:background="@null"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/et_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="22sp"
        android:background="@color/blue"
        android:layout_below="@+id/et_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />



    <TextView
        android:id="@+id/tv_resiger"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</LinearLayout>