<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcountAddCluFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_toLeftOf="@+id/figure"
                        android:gravity="center_vertical"
                        android:text="￥:" />

                    <EditText
                        android:id="@+id/figure"
                        android:layout_width="200dp"
                        android:layout_height="30dp"
                        android:layout_centerHorizontal="true"
                        android:background="#FFF"
                        android:gravity="center"
                        android:hint="Enter amount"
                        android:numeric="decimal" />
                </RelativeLayout>
            </LinearLayout>

            <EditText
                android:id="@+id/remarks"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="remarks" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:layout_centerVertical="true" />



                    <Button
                        android:id="@+id/date_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/choose_date" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/category"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/daily" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <Button
                        android:id="@+id/category_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/income_type" />
                    <Button
                        android:id="@+id/category_button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expense_type" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <Button
                    android:id="@+id/income"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/income" />

                <Button
                    android:id="@+id/expense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/expense" />
            </LinearLayout>


        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/insert"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>

    </LinearLayout>

</FrameLayout>
